src/styles/settings.scss
/* GENERAL */
$theme-image-path: "~uswds/src/img";
$theme-color-primary: "cyan-30v";
$theme-color-primary-dark: "blue-cool-40v";
$theme-color-primary-darker: "blue-cool-60v";
$theme-color-primary-light: "blue-cool-20v";
$theme-color-primary-lighter: "blue-cool-5v";

/* TYPOGRAPHY */
$theme-respect-user-font-size: false;
$theme-root-font-size: 14px;
$theme-font-path: "~uswds/src/fonts";
$theme-font-type-sans: "public-sans";
$theme-style-body-element: true;

/* SPACING */
$theme-grid-container-max-width: "desktop-lg";

/* COMPONENTS */
$theme-hero-image: "~uswds/src/img/hero.png";

$theme-text-color: "accent-cool-darker";
$theme-link-color: "accent-cool-darker";
$theme-link-hover-color: "violet-40v";
$theme-link-visited-color: "violet-40v";
$theme-body-font-size: "md";

